[JAVA-19668] Moved libraries module to jdk9-and-above profile + reverted changes fro libraries-6