@@ -64,7 +64,7 @@
         <dependency>
             <groupId>org.datanucleus</groupId>
             <artifactId>datanucleus-api-jdo</artifactId>
-            <version>${datanucleus.version}</version>
+            <version>${datanucleus-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.datanucleus</groupId>
@@ -180,6 +180,17 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.lang.String=ALL-UNNAMED
+                        --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
             <!-- JDO Plugin -->
             <plugin>
                 <groupId>org.datanucleus</groupId>
@@ -273,16 +284,17 @@
         <protonpack.version>1.15</protonpack.version>
         <google-api.version>1.23.0</google-api.version>
         <jets3t-version>0.9.4.0006L</jets3t-version>
-        <javax.jdo.version>3.2.0-m7</javax.jdo.version>
-        <datanucleus.version>5.1.1</datanucleus.version>
-        <datanucleus-maven-plugin.version>5.0.2</datanucleus-maven-plugin.version>
+        <javax.jdo.version>3.2.1</javax.jdo.version>
+        <datanucleus.version>6.0.3</datanucleus.version>
+        <datanucleus-api.version>6.0.1</datanucleus-api.version>
+        <datanucleus-maven-plugin.version>6.0.0-release</datanucleus-maven-plugin.version>
         <datanucleus-xml.version>5.0.0-release</datanucleus-xml.version>
-        <datanucleus-jdo-query.version>5.0.2</datanucleus-jdo-query.version>
+        <datanucleus-jdo-query.version>6.0.1</datanucleus-jdo-query.version>
         <chronicle.version>3.6.4</chronicle.version>
         <spring.version>4.3.8.RELEASE</spring.version>
         <spring-mock-mvc.version>3.0.3</spring-mock-mvc.version>
         <quartz.version>2.3.0</quartz.version>
-        <javaassist.version>3.21.0-GA</javaassist.version>
+        <javaassist.version>3.29.2-GA</javaassist.version>
         <jool.version>0.9.12</jool.version>
         <maven-jar-plugin.version>3.0.2</maven-jar-plugin.version>
         <commons-net.version>3.6</commons-net.version>
